skip all rows with all NAs

--- a/get_missed_rows.ipynb
+++ b/get_missed_rows.ipynb
@@ -2920,6 +2920,15 @@
     "    chr = chr_pos.split('_')[0]\n",
     "    pos = chr_pos.split('_')[1]\n",
     "\n",
+    "    m2_ref = None\n",
+    "    m2_alt = None\n",
+    "    f_ref = None\n",
+    "    f_alt = None\n",
+    "    vd_ref = None\n",
+    "    vd_alt = None\n",
+    "    vs_ref = None\n",
+    "    vs_alt = None\n",
+    "\n",
     "    curr_row = {}\n",
     "    curr_row['Chr'] = chr\n",
     "    curr_row['START_POS_REF'] = pos\n",
@@ -2988,6 +2997,11 @@
     "            else:\n",
     "                for feature_name in algo_features:\n",
     "                    curr_row[prefix + feature_name] = None\n",
+    "    \n",
+    "    # None of the 4 algos pick up this\n",
+    "    if m2_ref is None:\n",
+    "        continue\n",
+    "\n",
     "    for i in [m2_ref, f_ref, vd_ref, vs_ref]:\n",
     "        if i != 'NA':\n",
     "            curr_row['REF'] = i\n",
