--- a/naive_algo.ipynb
+++ b/naive_algo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "curr_folder = 'real1'\n",
     "csv_path = f'/Users/ngocanh/Documents/Master/in progress/CS4220/scripts/{curr_folder}_final.csv'\n",
+    "bed_path = f'/Users/ngocanh/Documents/Master/in progress/CS4220/{curr_folder}'\n",
     "NUM_TOP = 2\n",
     "algo_dict = {\n",
     "    'mutect2': 'FILTER_Mutect2',\n",
@@ -30,14 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/_0/ztgrcgnj1bd__vhjt7plwd2w0000gn/T/ipykernel_30267/3912418589.py:1: DtypeWarning: Columns (1,52) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/_0/ztgrcgnj1bd__vhjt7plwd2w0000gn/T/ipykernel_30641/3912418589.py:1: DtypeWarning: Columns (1,52) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(csv_path, delimiter='\\t')\n"
      ]
     }
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,6 +61,9 @@
     "def naive_algo_1(df):\n",
     "    df['count_num_true'] = df[algo_dict.values()].sum(axis=1)\n",
     "    df['pred_by_at_least_2'] = df.apply(lambda row: True if row['count_num_true'] > 1 else False, axis=1)\n",
+    "    df_to_bed = df[df['pred_by_at_least_2'] == True].reset_index(drop=True)\n",
+    "    df_to_bed = df_to_bed[['Chr', 'START_POS_REF', 'END_POS_REF']]\n",
+    "    df_to_bed.to_csv(f'{bed_path}/{curr_folder}_naive1.bed', sep='\\t', header=False, index=False)\n",
     "    print(\"\\nF1 output from at least 2 algorithms:\" )\n",
     "    print(get_f1(df, 'pred_by_at_least_2', 'is_snv'))\n",
     "\n",
@@ -72,13 +76,16 @@
     "    print(f1_score_dict)\n",
     "    top_cols = dict(sorted(f1_score_dict.items(), key = lambda x: x[1], reverse = True)[:NUM_TOP])\n",
     "    df['pred_by_top_2'] = df.apply(lambda row: all(row[col] for col in top_cols), axis=1)\n",
+    "    df_to_bed = df[df['pred_by_top_2'] == True].reset_index(drop=True)\n",
+    "    df_to_bed = df_to_bed[['Chr', 'START_POS_REF', 'END_POS_REF']]\n",
+    "    df_to_bed.to_csv(f'{bed_path}/{curr_folder}_naive2.bed', sep='\\t', header=False, index=False)\n",
     "    print(f\"\\nF1 output from top 2 algorithms: {top_cols.keys()}\" )\n",
     "    print(get_f1(df, 'pred_by_top_2', 'is_snv'))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -86,10 +93,10 @@
      "output_type": "stream",
      "text": [
       "F1 output from individual algos:\n",
-      "{'FILTER_Mutect2': 0.3572997510616488, 'FILTER_Varscan': 0.013910441143870538, 'FILTER_Vardict': 0.26708727655099895, 'FILTER_Freebayes': 0.29435327561700475}\n",
+      "{'FILTER_Mutect2': 0.3578762100322675, 'FILTER_Varscan': 0.013914682484685532, 'FILTER_Vardict': 0.2674309780065512, 'FILTER_Freebayes': 0.2947722567287785}\n",
       "\n",
       "F1 output from top 2 algorithms: dict_keys(['FILTER_Mutect2', 'FILTER_Freebayes'])\n",
-      "0.8201117318435754\n"
+      "0.8234854151084517\n"
      ]
     }
    ],
@@ -99,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +115,7 @@
      "text": [
       "\n",
       "F1 output from at least 2 algorithms:\n",
-      "0.5571658615136876\n"
+      "0.558579335793358\n"
      ]
     }
    ],
