--- a/processing.ipynb
+++ b/processing.ipynb
@@ -2,24 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/9x/00rwcm8x4897s1m2h7wcc84h0000gn/T/ipykernel_7361/1751846874.py:4: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import glob\n",
     "import itertools\n",
@@ -31,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +56,7 @@
        "'/Users/eugenegan/Documents/cs4220_projects'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -162,14 +147,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/9x/00rwcm8x4897s1m2h7wcc84h0000gn/T/ipykernel_15994/4209601426.py:1: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/9x/00rwcm8x4897s1m2h7wcc84h0000gn/T/ipykernel_7361/4209601426.py:1: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  real1_df = pd.read_csv(f\"/Users/eugenegan/Documents/cs4220_projects/data/{folder_name}/ver1-real-1-parse.txt\",sep='\\t')\n"
      ]
     }
@@ -180,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -498,19 +483,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'real1_truth_bed' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mreal1_truth_bed\u001b[49m\u001b[38;5;241m.\u001b[39mcolumns\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'real1_truth_bed' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "Index(['chrom', 'posStart', 'posEnd'], dtype='object')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -519,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +578,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -50841,7 +50825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -50906,7 +50890,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50917,7 +50901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50926,7 +50910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -50945,7 +50929,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50956,7 +50940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -51327,7 +51311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -51395,7 +51379,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51406,7 +51390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -51486,71 +51470,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "# Partion the features from the class to predict\n",
-    "all_df_X = all_df[all_df.columns[all_df.columns != 'IS_SNV']].copy() # get columns that are not 'good wine'\n",
-    "all_df_y = all_df['IS_SNV'].copy() # get the column named 'good wine'; this is our label\n",
-    "\n",
-    "# (random_state): we use a fixed random seed so we get the same results every time.\n",
-    "X_train, X_test, y_train, y_test = train_test_split(all_df_X, all_df_y, test_size=0.3, random_state=1)\n",
-    "\n",
-    "print (\"Number of training instances: \", len(X_train), \"\\nNumber of test instances: \", len(X_test))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train.describe()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Perform Linear Regression or KNN to train the model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get the machine learning algorithm k-NN\n",
-    "# Modify this code accordingly\n",
-    "from sklearn import neighbors\n",
-    "\n",
-    "\n",
-    "# Scale the features using StandardScaler\n",
-    "scaler = StandardScaler()\n",
-    "X_train = scaler.fit_transform(X_train)\n",
-    "X_test = scaler.transform(X_test)\n",
-    "\n",
-    "# Fitting and Predicting with the model\n",
-    "num=sqrt(len(X_train))\n",
-    "knn = neighbors.KNeighborsClassifier(n_neighbors = num, metric='euclidean') #used euclidean distance to perform the knn function\n",
-    "knn_model = knn.fit(X_train, y_train)\n",
-    "print('kNN accuracy for training set: %f' % knn_model.score(X_train, y_train))\n",
-    "#For training data, KNN model has already seen your data, hence will get 100%.\n",
-    "\n",
-    "print('kNN accuracy for test set: %f' % knn_model.score(X_test, y_test))"
    ]
   },
   {
@@ -51631,156 +51554,6 @@
     "for keys, item in all_algos.items():\n",
     "    print(f\"number of positions in {keys} :: {item[1]}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[E::hts_open_format] Failed to open file \"/Users/eugenegan/Documents/cs4220_projects/mutect2.vcf\" : No such file or directory\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] could not open variant file `b'/Users/eugenegan/Documents/cs4220_projects/mutect2.vcf'`: No such file or directory",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)\n",
-      "Cell \u001b[0;32mIn[31], line 2\u001b[0m\n",
-      "\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# open the file\u001b[39;00m\n",
-      "\u001b[0;32m----> 2\u001b[0m mutec_vcf \u001b[38;5;241m=\u001b[39m \u001b[43mVariantFile\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mfilepath\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m/\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mmutec\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# fetch the variants\u001b[39;00m\n",
-      "\u001b[1;32m      4\u001b[0m all_variants \u001b[38;5;241m=\u001b[39m mutec_vcf\u001b[38;5;241m.\u001b[39mfetch()\n",
-      "\n",
-      "File \u001b[0;32m~/Documents/cs4220_projects/test/lib/python3.10/site-packages/pysam/libcbcf.pyx:4117\u001b[0m, in \u001b[0;36mpysam.libcbcf.VariantFile.__init__\u001b[0;34m()\u001b[0m\n",
-      "\n",
-      "File \u001b[0;32m~/Documents/cs4220_projects/test/lib/python3.10/site-packages/pysam/libcbcf.pyx:4342\u001b[0m, in \u001b[0;36mpysam.libcbcf.VariantFile.open\u001b[0;34m()\u001b[0m\n",
-      "\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] could not open variant file `b'/Users/eugenegan/Documents/cs4220_projects/mutect2.vcf'`: No such file or directory"
-     ]
-    }
-   ],
-   "source": [
-    "# open the file\n",
-    "mutec_vcf = VariantFile(f\"{filepath}/{mutec}\")\n",
-    "# fetch the variants\n",
-    "all_variants = mutec_vcf.fetch()\n",
-    "# only look at 3 records\n",
-    "variants = itertools.islice(all_variants, 121)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('T', 'G')\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Other parameters in the dataset\n",
-    "# 'alleles',\n",
-    "#  'alleles_variant_types',\n",
-    "#  'alts',\n",
-    "#  'chrom',\n",
-    "#  'contig',\n",
-    "#  'copy',\n",
-    "#  'filter',\n",
-    "#  'format',\n",
-    "#  'header',\n",
-    "#  'id',\n",
-    "#  'info',\n",
-    "#  'pos',\n",
-    "#  'qual',\n",
-    "#  'ref',\n",
-    "#  'rid',\n",
-    "#  'rlen',\n",
-    "#  'samples',\n",
-    "#  'start',\n",
-    "#  'stop',\n",
-    "#  'translate'\n",
-    "print(variant.alleles)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['__class__',\n",
-       " '__delattr__',\n",
-       " '__dir__',\n",
-       " '__doc__',\n",
-       " '__eq__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__getattribute__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__init__',\n",
-       " '__init_subclass__',\n",
-       " '__le__',\n",
-       " '__lt__',\n",
-       " '__ne__',\n",
-       " '__new__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__setattr__',\n",
-       " '__setstate__',\n",
-       " '__sizeof__',\n",
-       " '__str__',\n",
-       " '__subclasshook__',\n",
-       " 'alleles',\n",
-       " 'alleles_variant_types',\n",
-       " 'alts',\n",
-       " 'chrom',\n",
-       " 'contig',\n",
-       " 'copy',\n",
-       " 'filter',\n",
-       " 'format',\n",
-       " 'header',\n",
-       " 'id',\n",
-       " 'info',\n",
-       " 'pos',\n",
-       " 'qual',\n",
-       " 'ref',\n",
-       " 'rid',\n",
-       " 'rlen',\n",
-       " 'samples',\n",
-       " 'start',\n",
-       " 'stop',\n",
-       " 'translate']"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dir(variant)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
