--- a/get_missed_rows.ipynb
+++ b/get_missed_rows.ipynb
@@ -3539,9 +3539,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cs4220p1",
+   "display_name": "test",
    "language": "python",
-   "name": "cs4220p1"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3553,7 +3553,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
