Added more comments to make it slightly clearer

--- a/feature_engineering/eda_v3.ipynb
+++ b/feature_engineering/eda_v3.ipynb
@@ -481,7 +481,7 @@
     "maj_class = max(class_0.shape[0],class_1.shape[0])\n",
     "min_class = min(class_0.shape[0],class_1.shape[0])\n",
     "maj_counts = (min_class/0.4 * 0.6)\n",
-    "drop_num =  maj_class - (min_class/0.4 * 0.6)\n",
+    "drop_num =  maj_class - (min_class/0.4 * 0.6) # maj_class - maj_counts, so that you have to only drop this number of rows to be closer to min_class\n",
     "print(f\"To drop : {drop_num}, maj counts: {maj_counts}\")"
    ]
   },
@@ -514,12 +514,12 @@
     "\n",
     "min_kept = class_0.copy()\n",
     "sampled_maj = class_1.copy()\n",
-    "kept_df = sampled_maj.loc[list(sampled_maj[feature_list].dropna().index)]\n",
-    "len_keep = len(sampled_maj[feature_list].dropna())\n",
-    "sample_num = maj_counts - len_keep\n",
+    "kept_df = sampled_maj.loc[list(sampled_maj[feature_list].dropna().index)] # it is just len(kept_df)=len_keep; best to include these rows\n",
+    "len_keep = len(sampled_maj[feature_list].dropna()) # num of rows with no null values in the actual maj\n",
+    "sample_num = maj_counts - len_keep # find the difference between desired number in majority class and those non-null rows in actual row\n",
     "print(int(sample_num))\n",
-    "sampled_maj = sampled_maj[sampled_maj[key_feature].isna().any(axis=1)].sample(int(sample_num))\n",
-    "\n",
+    "sampled_maj = sampled_maj[sampled_maj[key_feature].isna().any(axis=1)].sample(int(sample_num)) #introducing the some randomness into these null rows\n",
+    "#sampled_maj[sampled_maj[key_feature].isna().any(axis=1)] will give the same length as sample_num\n",
     "df = pd.concat([kept_df,sampled_maj,min_kept])\n",
     "\n",
     "# Check if total numbers match\n",
