added model files and new eval notebooks

--- a/feature_engineering/combined_dataset.ipynb
+++ b/feature_engineering/combined_dataset.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/h7/fr7g30_x5x12d68ww_s6w2_m0000gn/T/ipykernel_7598/3296619640.py:5: DeprecationWarning: \n",
+      "/var/folders/h7/fr7g30_x5x12d68ww_s6w2_m0000gn/T/ipykernel_81376/3296619640.py:5: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
        "dict_keys(['median_input', 'POS_IDX', 'y_label'])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,28 +70,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "list_key_join = ['feature_set_syn2', 'feature_set_syn1', 'feature_set_real1', 'feature_set_syn4', 'feature_set_syn5', 'feature_set_syn3']\n",
-    "# list_key_join = ['feature_set_syn2']"
+    "list_key_join = ['feature_set_real1', 'feature_set_syn4', 'feature_set_syn3']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(10785, 31)\n",
-      "(8805, 31)\n",
       "(3270, 31)\n",
       "(38480, 31)\n",
-      "(3830, 31)\n",
       "(19417, 31)\n"
      ]
     }
@@ -115,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +138,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,21 +161,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "saved combined_dataset\n"
+      "saved combined_dataset_real1_syn3_4\n"
      ]
     }
    ],
    "source": [
     "# Save Pickle file\n",
     "filepath = \"/Users/melloo21/Desktop/NUS Items/CS4220/cs4220_projects/data/feature_set\"\n",
-    "feature_filename =f\"combined_dataset\"\n",
+    "feature_filename =f\"combined_dataset_real1_syn3_4\"\n",
     "with open(f'{filepath}/{feature_filename}.pickle', 'wb') as handle:\n",
     "    pickle.dump(feature_set, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
     "print(f\"saved {feature_filename}\")"
