--- a/original_files/naive_algo.ipynb
+++ b/original_files/naive_algo.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/h7/fr7g30_x5x12d68ww_s6w2_m0000gn/T/ipykernel_91730/435009928.py:1: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -13,13 +28,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "curr_folder = 'real1'\n",
-    "csv_path = f'/Users/ngocanh/Documents/Master/in progress/CS4220/scripts/{curr_folder}_final.csv'\n",
-    "bed_path = f'/Users/ngocanh/Documents/Master/in progress/CS4220/{curr_folder}'\n",
+    "curr_folder = 'real2'\n",
+    "csv_path = f'/Users/melloo21/Desktop/NUS Items/CS4220/cs4220_projects/data/raw_csv/{curr_folder}_final.csv'\n",
+    "bed_path = f'/Users/melloo21/Desktop/NUS Items/CS4220/cs4220_projects/data/{curr_folder}'\n",
     "NUM_TOP = 2\n",
     "algo_dict = {\n",
     "    'mutect2': 'FILTER_Mutect2',\n",
@@ -31,14 +46,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/_0/ztgrcgnj1bd__vhjt7plwd2w0000gn/T/ipykernel_30641/3912418589.py:1: DtypeWarning: Columns (1,52) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/h7/fr7g30_x5x12d68ww_s6w2_m0000gn/T/ipykernel_91730/3912418589.py:1: DtypeWarning: Columns (23,24,28) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(csv_path, delimiter='\\t')\n"
      ]
     }
@@ -49,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -93,10 +108,10 @@
      "output_type": "stream",
      "text": [
       "F1 output from individual algos:\n",
-      "{'FILTER_Mutect2': 0.3578762100322675, 'FILTER_Varscan': 0.013914682484685532, 'FILTER_Vardict': 0.2674309780065512, 'FILTER_Freebayes': 0.2947722567287785}\n",
+      "{'FILTER_Mutect2': 0.2416551724137931, 'FILTER_Varscan': 0.017048188629958067, 'FILTER_Vardict': 0.13489527866524673, 'FILTER_Freebayes': 0.21490467937608318}\n",
       "\n",
       "F1 output from top 2 algorithms: dict_keys(['FILTER_Mutect2', 'FILTER_Freebayes'])\n",
-      "0.8234854151084517\n"
+      "0.7969094922737306\n"
      ]
     }
    ],
@@ -106,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -115,27 +130,20 @@
      "text": [
       "\n",
       "F1 output from at least 2 algorithms:\n",
-      "0.558579335793358\n"
+      "0.3031496062992126\n"
      ]
     }
    ],
    "source": [
     "naive_algo_1(df)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cs4220p1",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "cs4220p1"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -147,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4
  },
